--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,15 @@
   <title>FightApp</title>
   <base href="/">
 
+  
+  <!-- Bootstrap Related -->
+  <script src="../node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <link href="../bootstrap/dist/css/bootstrap.min.css" />
+
+  <!-- Angular Material Theme -->
+  <link href="../node_modules/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
