--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
   <!-- Bootstrap Related -->
   <script src="../node_modules/jquery/dist/jquery.min.js"></script>
   <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-  <link href="../bootstrap/dist/css/bootstrap.min.css" />
+  <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="../node_modules/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
 
   <!-- Angular Material Theme -->
   <link href="../node_modules/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet">
